# template-satellite-cpp-cmake

./: .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp  rename-template.py
.github/workflows/: ci.yml
cmake/: clang-tools.cmake
